// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getRouteData > should return first section if pagePerSection and hash is empty 1`] = `
{
  "displayMode": "all",
  "sections": [
    {
      "components": [
        {
          "module": 1,
          "name": "Button",
          "props": {
            "displayName": "Button",
            "examples": [
              {
                "content": "const a = 0",
                "evalInContext": [Function],
                "type": "code",
              },
              {
                "content": "# title",
                "type": "markdown",
              },
            ],
          },
        },
        {
          "module": 2,
          "name": "Image",
          "props": {
            "displayName": "Image",
          },
        },
      ],
      "exampleMode": "collapse",
      "name": "Components",
      "sectionDepth": 0,
      "sections": [],
      "slug": "components",
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData > should return not found if pagePerSection and hash is #/Buttons/Label/Not 1`] = `
{
  "displayMode": "notFound",
  "sections": [],
}
`;

exports[`getRouteData > should return one component 1`] = `
{
  "displayMode": "component",
  "sections": [
    {
      "components": [
        {
          "module": 1,
          "name": "Button",
          "props": {
            "displayName": "Button",
            "examples": [
              {
                "content": "const a = 0",
                "evalInContext": [Function],
                "type": "code",
              },
              {
                "content": "# title",
                "type": "markdown",
              },
            ],
          },
        },
      ],
      "exampleMode": "collapse",
      "slug": "components",
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData > should return one component if pagePerSection and hash is #/Buttons/Label 1`] = `
{
  "displayMode": "all",
  "sections": [
    {
      "components": [
        {
          "module": 1,
          "name": "Label",
        },
      ],
      "exampleMode": "collapse",
      "slug": "buttons",
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData > should return one example from a component 1`] = `
{
  "displayMode": "example",
  "sections": [
    {
      "components": [
        {
          "module": 1,
          "name": "Button",
          "props": {
            "displayName": "Button",
            "examples": [
              {
                "content": "# title",
                "type": "markdown",
              },
            ],
          },
        },
      ],
      "exampleMode": "collapse",
      "slug": "components",
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData > should return one example from a section 1`] = `
{
  "displayMode": "example",
  "sections": [
    {
      "components": [],
      "content": [
        {
          "content": "# title",
          "type": "markdown",
        },
      ],
      "exampleMode": "collapse",
      "name": "Section",
      "sectionDepth": 0,
      "sections": [],
      "slug": "section",
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData > should return one section 1`] = `
{
  "displayMode": "section",
  "sections": [
    {
      "components": [],
      "content": [
        {
          "content": "const a = 0",
          "evalInContext": [Function],
          "type": "code",
        },
        {
          "content": "# title",
          "type": "markdown",
        },
      ],
      "exampleMode": "collapse",
      "name": "Section",
      "sectionDepth": 0,
      "sections": [],
      "slug": "section",
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData > should return one section if pagePerSection and hash is #/Section 1`] = `
{
  "displayMode": "all",
  "sections": [
    {
      "components": [],
      "content": [
        {
          "content": "const a = 0",
          "evalInContext": [Function],
          "type": "code",
        },
        {
          "content": "# title",
          "type": "markdown",
        },
      ],
      "exampleMode": "collapse",
      "name": "Section",
      "sectionDepth": 0,
      "sections": [],
      "slug": "section",
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData > should return one section without components if pagePerSection and hash is #/Buttons 1`] = `
{
  "displayMode": "all",
  "sections": [
    {
      "components": [],
      "exampleMode": "collapse",
      "name": "Buttons",
      "sectionDepth": 2,
      "sections": [],
      "slug": "buttons",
      "usageMode": "collapse",
    },
  ],
}
`;
